# baras

./: .gitignore  .markdownlint.yml  Cargo.toml  README.md  justfile  latest.json
.github/workflows/: build.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  (+3 more)
app/: .gitignore  Cargo.toml  Dioxus.toml  index.html
app/.cargo/: config.toml
app/assets/: data-explorer.css  styles.css
app/src/: api.rs  app.rs  main.rs  types.rs  utils.rs
app/src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
app/src-tauri/src/: bridge.rs  hotkeys.rs  lib.rs  logging.rs  overlay.rs  router.rs  service.rs  tray.rs  updater.rs
app/src-tauri/src/audio/: events.rs  mod.rs  service.rs
app/src-tauri/src/commands/: effects.rs  encounters.rs  mod.rs  overlay.rs  parsely.rs  query.rs  service.rs  timers.rs
app/src-tauri/src/overlay/: commands.rs  manager.rs  metrics.rs  mod.rs  spawn.rs  state.rs  types.rs
app/src-tauri/src/service/: directory.rs  handler.rs  mod.rs  state.rs
app/src-tauri/src/state/: mod.rs  raid_registry.rs
app/src/components/: ability_icon.rs  charts_panel.rs  class_icons.rs  combat_log.rs  data_explorer.rs  effect_editor.rs  history_panel.rs  hotkey_input.rs  mod.rs  phase_timeline.rs  settings_panel.rs  timer_editor.rs  toast.rs
app/src/components/encounter_editor/: challenges.rs  conditions.rs  counters.rs  entities.rs  mod.rs  new_forms.rs  phases.rs  tabs.rs  timers.rs  triggers.rs
cli/: Cargo.toml
core/: Cargo.toml
core/definitions/: absorbs.json
core/definitions/effects/: custom.toml  dots.toml  hots.toml
core/definitions/encounters/flashpoints/: a_traitor_among_the_chiss.toml  assault_on_tython.toml  athiss.toml  battle_of_rishi.toml  blood_hunt.toml  boarding_party.toml  cademimu.toml  crisis_on_umbara.toml  czerka_core_meltdown.toml  czerka_corporate_labs.toml  depths_of_manaan.toml  directive_7.toml  hammer_station.toml  kaon_under_siege.toml  korriban_incursion.toml  legacy_of_the_rakata.toml  lost_island.toml  mandalorian_raiders.toml  objective_meridian.toml  ruins_of_nul.toml  secrets_of_the_enclave.toml  shrine_of_silence.toml  spirit_of_vengeance.toml  the_battle_of_ilum.toml  the_black_talon.toml  the_false_emperor.toml  the_foundry.toml  the_nathema_conspiracy.toml  the_red_reaper.toml
core/definitions/encounters/operations/: dxun.toml  eternity_vault.toml  explosive_conflict.toml  gods_from_the_machine.toml  karaggas_palace.toml  propagator_core.toml  r4_anomaly.toml  scum_and_villainy.toml  temple_of_sacrifice.toml  terror_from_beyond.toml  the_dread_fortress.toml  the_dread_palace.toml  the_ravagers.toml
core/definitions/encounters/test/: dsl_coverage_test.toml
core/src/: app_state.rs  audio.rs  combat_event.rs  debug_log.rs  directory_index.rs  directory_watcher.rs  encounter.rs  entity_filter.rs  file_handler.rs  lib.rs  parser.rs  reader.rs  serde_defaults.rs  session_cache.rs
core/src/boss/: challenge.rs  counter.rs  definition.rs  loader.rs  mod.rs  phase.rs  state.rs
core/src/boss_timers/: definition.rs  loader.rs  mod.rs  state.rs
core/src/combat_log/: combat_event.rs  error.rs  mod.rs  parser.rs  reader.rs
core/src/combat_log/parser/: tests.rs
core/src/context/: app_config.rs  background_tasks.rs  config.rs  directory_index.rs  error.rs  interner.rs  log_files.rs  mod.rs  parser.rs  parsing_session.rs  watcher.rs
core/src/dsl/: audio.rs  challenge.rs  counter.rs  definition.rs  entity_filter.rs  error.rs  loader.rs  mod.rs  phase.rs
core/src/dsl/triggers/: matchers.rs  mod.rs
core/src/effects/: active.rs  definition.rs  mod.rs  tracker.rs  tracker_tests.rs
core/src/encounter/: challenge.rs  combat.rs  effect_instance.rs  entity_info.rs  metrics.rs  mod.rs  shielding.rs  summary.rs
core/src/events/: challenge.rs  combat_state.rs  counter.rs  mod.rs  phase.rs  processor.rs  processor_tests.rs  signal.rs
core/src/game_data/: boss_registry.rs  bosses.rs  discipline.rs  effects.rs  flashpoint_bosses.rs  flashpoints.rs  lair_bosses.rs  mod.rs  pvp_instance.rs  raid_bosses.rs  raids.rs  shield_absorbs.rs  world_bosses.rs
core/src/icons/: mod.rs
core/src/log/: parser.rs
core/src/query/: breakdown.rs  column_helpers.rs  combat_log.rs  effects.rs  error.rs  mod.rs  overview.rs  time_series.rs  timeline.rs
core/src/session/: cache.rs  encounter.rs  info.rs
core/src/signal_processor/: challenge.rs  combat_state.rs  counter.rs  handler.rs  mod.rs  phase.rs  processor.rs  processor_tests.rs  signal.rs
core/src/state/: cache.rs  info.rs  mod.rs
core/src/storage/: error.rs  mod.rs  writer.rs
core/src/swtor_data/: bosses.rs  mod.rs
core/src/swtor_ids/: effects.rs  mod.rs  shield_effects.rs
core/src/timers/: active.rs  definition.rs  error.rs  manager.rs  manager_tests.rs  matching.rs  mod.rs  preferences.rs  signal_handlers.rs
core/src/triggers/: matchers.rs  mod.rs
docs/: boss_encounter_template.toml  effect_definition_template.toml  log-format-reference.md
icons/: icons.csv
overlay/: Cargo.toml
overlay/examples/: new_overlays.rs
overlay/src/: class_icons.rs  frame.rs  icons.rs  lib.rs  main.rs  manager.rs  renderer.rs  utils.rs
overlay/src/overlays/: alerts.rs  boss_health.rs  challenges.rs  cooldowns.rs  dot_tracker.rs  effects.rs  effects_ab.rs  meter.rs  metric.rs  mod.rs  personal.rs  personal_buffs.rs  personal_debuffs.rs  raid.rs  timers.rs
overlay/src/platform/: macos.rs  mod.rs  wayland.rs  windows.rs  x11.rs
overlay/src/widgets/: colors.rs  header.rs  labeled_value.rs  mod.rs  progress_bar.rs
parse-worker/: Cargo.toml
parse-worker/src/: main.rs
src/: app_state.rs  commands.rs  directory_index.rs  directory_watcher.rs  encounter.rs  event_models.rs  lib.rs  main.rs  parser.rs  reader.rs  repl.rs  session_cache.rs  watcher.rs
types/: Cargo.toml
validate/: Cargo.toml
validate/src/: main.rs
validate/src/output/: cli.rs  mod.rs
validate/src/replay/: clock.rs  lag.rs  mod.rs
validate/src/verification/: checkpoint.rs  mod.rs
(+135 files in other folders)
