[package]
name = "baras"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
confy = { version = "2.0.0", default-features = false, features = [
  "yaml_conf",
] }
memchr = "2.7.6"
memmap2 = "0.9.9"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
shlex = "1.3.0"
time = { version = "0.3.44", features = ["parsing"] }
tokio = { version = "1.48.0", features = ["full"] }
