[workspace]
resolver = "2"
members = ["types", "core", "overlay", "app", "app/src-tauri", "validate", "parse-worker"]

[workspace.lints.clippy]
too_many_arguments = "allow"

[profile.release]
lto = "thin"           # Link-time optimization across crates
codegen-units = 1      # Better optimization (slower compile)
panic = "abort"        # No unwinding overhead

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
