[package]
name = "baras-core"
version = "0.1.0"
edition = "2024"


[dependencies]
confy = { version = "2.0.0", default-features = false, features = [
  "yaml_conf",
] }
hashbrown = "0.16.1"
memchr = "2.7.6"
notify = "8.2"
memmap2 = "0.9.9"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
phf = { version = "0.13.1", features = ["macros"] }
chrono = "0.4.42"
