[package]
name = "baras-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
baras-types = { path = "../types" }
confy = { version = "2.0.0", default-features = false, features = [
  "toml_conf",
] }
hashbrown = "0.16.1"
memchr = "2.7.6"
notify = "8.2"
memmap2 = "0.9.9"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
lasso = { version = "0.7.3", features = ["multi-threaded"] }
chrono = "0.4.42"
phf = { version = "0.13.1", features = ["macros"] }
dirs = "6.0.0"
encoding_rs = "0.8"
toml = "0.9"
arrow = { version = "57", default-features = false, features = ["ipc"] }
parquet = { version = "57", default-features = false, features = [
  "arrow",
  "snap",
  "zstd",
] }
datafusion = { version = "51", default-features = false, features = [
  "parquet",
  "sql",
  "nested_expressions",
] }
datafusion-functions-table = { version = "51.0", default-features = false }
