[package]
name = "baras-overlay"
version = "0.1.0"
edition = "2024"

[dependencies]
baras-core = { path = "../core" }

# Rendering (cross-platform)
tiny-skia = "0.11"
cosmic-text = "0.12"

# Async runtime
tokio = { version = "1.48", features = ["sync", "rt", "macros"] }

# Platform: Wayland (Linux)
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
memmap2 = "0.9"
rustix = { version = "1.0", features = ["fs", "mm"] }

# Platform: X11 (Linux fallback) - TODO
# x11rb = "0.13"

# Platform: Windows
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
] }

# Platform: macOS - TODO
# [target.'cfg(target_os = "macos")'.dependencies]
# cocoa = "0.25"
# core-graphics = "0.23"
# objc = "0.2"
