[package]
name = "baras-overlay"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = []

[dependencies]
baras-core = { path = "../core" }

# Rendering (cross-platform)
tiny-skia = "0.11"
cosmic-text = "0.15"
fontdb = "0.23"      # Shared font database (re-export from cosmic-text)
sys-locale = "0.3"   # System locale detection

# Async runtime
tokio = { version = "1.48", features = ["sync", "rt", "macros"] }

# Logging
tracing = { workspace = true }

# Icon loading
png = "0.17"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

# Platform: Wayland (Linux)
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
memmap2 = "0.9"
rustix = { version = "1.0", features = ["fs", "mm"] }

# Platform: X11 (Linux fallback)
x11rb = { version = "0.13", features = ["randr", "shape", "shm"] }

# Platform: Windows
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
] }

# Platform: macOS
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
core-graphics = "0.24"
objc = "0.2"
