[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints]
workspace = true


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
baras-core = { path = "../../core" }
baras-types = { path = "../../types" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
baras-overlay = { path = "../../overlay" }
tokio = { version = "1.48.0", features = ["sync"] }
home = "0.5.12"
dirs = "6.0.0"
chrono = "0.4.42"
toml = "0.9"
reqwest = { version = "0.12", features = ["multipart"] }
flate2 = "1.1"
encoding_rs = "0.8"
rodio = { version = "0.19", default-features = false, features = ["wav", "vorbis", "mp3"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tts = "0.26"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

